--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.morphium.playground.PlaygroundServer</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
